tests/phase2-semantics/atomic_tests/rule-15.dcf
import printf;

void main () {
    // ok
    printf(true==true);
    printf(5L!=6L);
    printf(100==0x20);
    printf(0x5<10);

    // error
    printf(true+true);
    printf(true<5);
    printf(0x5!=10L);
    
}